<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">
  <TextView
      android:layout_width="wrap_content"
      android:layout_centerHorizontal="true"
      android:layout_height="wrap_content"
      android:id="@+id/logintext"
      android:text="@string/text"
      android:textAlignment="center"
      android:layout_marginTop="200dp"
      android:textStyle="bold"
      android:textSize="40sp"
      android:padding="15dp"
      android:textColor="@color/black"
      />
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:gravity="center"
      >
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:hint="@string/edtname"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/black"
        android:id="@+id/name"
        android:inputType="text"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColorHint="@color/black"
        android:ems="12"
        android:hint="@string/edtemail"
        android:layout_marginTop="10dp"
        android:id="@+id/email"
        android:inputType="text"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"
        android:text="@string/SubBtn"
        android:id="@+id/logbtn"/>

  </LinearLayout>

</RelativeLayout>