<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".dashboard">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="37dp"
        android:background="@color/black"
        android:textColor="@color/white"

        android:textStyle="bold"
        android:textSize="40sp"
        android:padding="15dp"
        android:id="@+id/customer"
        />
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:columnCount="2">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="200dp"

            android:id="@+id/img1"
            android:src="@drawable/fitlogo"/>
        <ImageView
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_marginLeft="15dp"
            android:src="@drawable/fitlogo"/>
        <TextView
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/bmitext"
            android:textAlignment="center"
            android:textSize="40sp"
            android:id="@+id/bmi"
            android:layout_marginTop="15dp"
            />
        <TextView
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/meditext"
            android:textAlignment="center"
            android:textSize="40sp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:id="@+id/medi"
            />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="200dp"

            android:src="@drawable/fitlogo"/>
        <ImageView
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_marginLeft="15dp"
            android:src="@drawable/fitlogo"/>

        <TextView
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/tipstext"
            android:textAlignment="center"
            android:textSize="40sp"
            android:layout_marginTop="15dp"
            android:id="@+id/tips"
            />
        <TextView
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="40sp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:id="@+id/excer"
            />


    </GridLayout>

</LinearLayout>